<resources>
    <string name="app_name">Human Learning</string>
    <string name="AddPicture_takePictureButtonText">Take a picture</string>
    <string name="AddPicture_takePictureButtonTextWhenImageTaken">Change picture</string>
    <string name="AddPicture_selectCategoryButtonText">Select the category</string>
    <string name="AddPicture_saveButtonText">Save selection</string>
    <string name="AddPicture_permissionGrantedToast">Camera permission granted.</string>
    <string name="AddPicture_categorySelectionDialogTitle">Pick a category</string>
    <string name="AddPicture_permissionNeededDialogTitle">Camera required</string>
    <string name="AddPicture_permissionNeededDialogMessage">To use this functionality, access to the camera is required. Either you have denied the app the permission to use it or your device has no camera.</string>
    <string name="MetadataEditing_DataCreationTitle">Categories List :</string>
    <string name="MetadataEditing_DataCreationSubmitButton">Save changes</string>
    <string name="MetadataEditing_DataCreationAddButton">Add new category</string>
    <string name="MetadataEditing_DataCreationCategoryHintText">Enter category name</string>
    <string name="AddPicture_errorWhileTakingPictureDialogTitle">Error</string>
    <string name="AddPicture_errorWhileTakingPictureDialogMessage">An error occurred while taking the picture, please try again.</string>
    <string name="AddPicture_camareImageViewDescription">Shows the picture which has just been taken</string>
    <string name="LearningSettings_presentationButton">PRESENTATION</string>
    <string name="LearningSettings_representationButton">REPRESENTATION</string>
    <string name="LearningSettings_evaluationButton">EVALUATION</string>
    <string name="LearningSettings_tvLearningModeText">LEARNING MODE</string>

    <string name="MetadataEditing_infoTitle">Info</string>
    <string name="MetadataEditing_modifyCategoriesButton">Modify name and categories</string>
    <string name="DisplayDataset_addNewPictureButton">Add new picture</string>
    <string name="DisplayDataset_deleteDatasetButton">Delete dataset</string>
    <string name="MetadataEditing_enterDatasetNameHintText">Enter dataset name</string>
    <string name="DisplayDataset_datasetNameText">Dataset name</string>
    <string name="DisplayImage_imageTobeDisplayed">image to be displayed</string>
    <string name="DatasetsOverview_createButton">Create dataset</string>
    <string name="DatasetsOverview_Title">Datasets Overview</string>
    <string name="DisplayDataset_deletingDatasetText">Deleting dataset</string>
    <string name="DisplayDataset_deleteConfirmationMessage">Are you sure you want to delete this dataset?</string>
    <string name="MetadataEditing_categoriesEditingInfo">General information :\n\n
         - A category is a word representing a type of object (Ex: Fork).\n\n
         - Every picture belongs to a category of the dataset.\n\n
     Possible actions :\n\n
     - You can add a new category and name it as you wish by clicking the "Add new category"
     button.\n\n
     - You can delete a category by clicking on the red trashcan icon.\n\n
     - You can modify the name of the dataset by clicking on the name of the dataset on the top of
     the screen. \n\n
     - Once you have finished everything you wanted to do, you can click on the "Save data" button to
     save your modifications.</string>
    <string name="DisplayImageSet_infoTitle"> General information :\n\n
         - Here are displayed all the pictures of the selected category.\n\n
         - A representative picture is a picture that is used to represent the category in the dataset.
         Such a picture is not part of the pictures of the category.\n\n
         Possible actions :\n\n
         - To delete pictures : click longer on the picture you want to delete, select all the pictures to delete and press the trashcan icon.\n\n
         - To set an picture as representative of the category : click longer on the picture and select the star icon.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <plurals name="DisplayImageSet_numberOfSelectedPicturesText">
        <item quantity="one">%d picture selected </item>
        <item quantity="other">%d pictures selected </item>
    </plurals>
    <string name="GoogleSignIn_loginStatusSuccessMessage">Welcome %1$s</string>
    <string name="GoogleSignIn_loginStatusDefaultMessage">Not logged in</string>
    <string name="DatasetList_defaultDatasetNameText">Dataset name</string>
    <string name="DatasetList_imageContentDescription">Category representative of the dataset</string>
    <string name="DatasetList_deleteCategoryButton">Button to delete a category</string>
    <string name="AddPicture_selectExistingPictureButton">Select Existing Picture</string>
    <string name="AddPicture_useCameraButton">Use camera</string>
    <string name="SelectPicture_choosePictureButton">Choose Picture</string>
    <string name="SelectPicture_deleteSelectedPicturesButton">Delete selected pictures</string>
    <string name="DisplayImageSet_setAsRepresentativePictureButton">Set as representative picture</string>
    <string name="BottomNav_gotoLearningButton">Learning</string>
    <string name="SideNav_loginMenu">Login</string>
    <string name="Home_startLearningButton">START LEARNING!</string>
    <string name="BottomNav_gotoDatasetEditingButton">Dataset Editing</string>
    <string name="nav_graph_label_home">Home</string>
    <string name="nav_graph_label_datasets_overview">Datasets Overview</string>
    <string name="nav_graph_label_login">Login</string>
    <string name="nav_graph_label_learning_dataset_selection">Select a Dataset</string>
    <string name="nav_graph_label_learning_settings">Learning Settings</string>
    <string name="nav_graph_label_learning">Learning</string>
    <string name="nav_graph_label_categories_editing">Edit Categories</string>
    <string name="nav_graph_label_display_dataset">Display Dataset</string>
    <string name="nav_graph_label_display_image_set">Dataset Images</string>
    <string name="nav_graph_label_display_image">Display Image</string>
    <string name="nav_graph_label_add_picture">Add a New Picture</string>
    <string name="nav_graph_label_take_picture">Take a Picture</string>
    <string name="nav_graph_label_select_picture">Select a Picture</string>
    <string name="GoogleSignIn_loginAdminCheckBox">sign up as admin</string>
    <string name="nav_graph_label_evaluation_result">Evaluation Result</string>
    <string name="Search_title">Search</string>
    <string name="Download_icon">download_icon</string>
    <string name="EvaluationResult_graphLabel">Success percentage</string>
    <string name="EvaluationResult_learnAgainButton">Learn Again!</string>
    <string name="Home_title">Home</string>
    <string name="GoogleSignIn_signOutButton">SIGN OUT</string>
    <string name="Home_imageViewLogoContentDescription">Home Logo</string>
    <string name="learning_im_to_sort_contentDescription">Image To Sort</string>
    <string name="Learning_cat_2_contentDescription">Third category to sort</string>
    <string name="Learning_cat_1_contentDescription">Second category to sort</string>
    <string name="Learning_cat_0_contentDescription">First category to sort</string>
    <string name="SelectPicture_previewContentDescription">Selected Image Preview</string>
    <string name="ImageAndCategory_itemContentDescription">Image/Category Pair</string>
    <string name="ImageItem_contentDescription">Image Item</string>
    <string name="LearningSettings_info">Learning Settings Info</string>
    <string name="LearningSetting_displaysInfo">
        - Presentation : an image must be classified against an exact copy \n\n
        - Representation : an image must be classified against a representative of its category \n\n
        - Evaluation : perform a ComVoor-like evaluation on the selected dataset
    </string>
</resources>
